--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "HawSpell (Hawaiian Dictionary)",
+    "name": "HawSpell",
     "description": "Hawaiian spell-checking dictionary",
     "version": "{VERSION}",
     "author": "Jon Thysell",
