--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -49,8 +49,9 @@ jobs:
     - name: Get Version
       run: |
         . ${{ env.ScriptDir }}/utils.ps1
-        $env:HawSpellVersion = Get-Version
-        Write-Host HawSpell v$env:HawSpellVersion
+        $version = Get-Version
+        echo "HawSpellVersion=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        Write-Host HawSpell v$version
 
     - name: Build Hunspell dictionary
       run: ${{ env.ScriptDir }}/build-hunspell.ps1
@@ -61,8 +62,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.pub_create_github_release.outputs.upload_url }}
-        asset_path: ${{ env.BuildDir }}/HawSpell_${{ $env:HawSpellVersion }}.zip
-        asset_name: HawSpell_${{ $env:HawSpellVersion }}.zip
+        asset_path: ${{ env.BuildDir }}/HawSpell_${{ env.HawSpellVersion }}.zip
+        asset_name: HawSpell_${{ env.HawSpellVersion }}.zip
         asset_content_type: application/zip
 
     - name: Build Firefox extension
@@ -74,8 +75,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.pub_create_github_release.outputs.upload_url }}
-        asset_path: ${{ env.BuildDir }}/HawSpell_${{ $env:HawSpellVersion }}.xpi
-        asset_name: HawSpell_${{ $env:HawSpellVersion }}.xpi
+        asset_path: ${{ env.BuildDir }}/HawSpell_${{ env.HawSpellVersion }}.xpi
+        asset_name: HawSpell_${{ env.HawSpellVersion }}.xpi
         asset_content_type: application/x-xpinstall
 
     - name: Build OpenOffice extension
@@ -87,6 +88,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.pub_create_github_release.outputs.upload_url }}
-        asset_path: ${{ env.BuildDir }}/HawSpell_${{ $env:HawSpellVersion }}.oxt
-        asset_name: HawSpell_${{ $env:HawSpellVersion }}.oxt
+        asset_path: ${{ env.BuildDir }}/HawSpell_${{ env.HawSpellVersion }}.oxt
+        asset_name: HawSpell_${{ env.HawSpellVersion }}.oxt
         asset_content_type: application/vnd.openofficeorg.extension
