--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -1,4 +1,4 @@
-name: Publish Release
+HawSpellVersionname: Publish Release
 
 env:
   BuildDir: ./bld
@@ -23,7 +23,7 @@ jobs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Create Release Notes
       run: ${{ env.ScriptDir }}/publish-releasenotes.ps1
@@ -35,7 +35,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        release_name: ${{ env.Product }} ${{ github.ref }}
+        release_name: HawSpell ${{ github.ref }}
         body_path: ${{ env.BuildDir }}/ReleaseNotes.md
         draft: false
         prerelease: ${{ env.Prerelease }}
@@ -45,6 +45,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: pub_create_github_release
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
 
     - name: Get Version
       run: |
